# heartlib

./: .gitignore  README.md  asr_demo.py  demo.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  tmp.txt
.assets/: lyrics.txt  tags.txt
examples/: README.md  run_lyrics_transcription.py  run_music_generation.py
samples/: lyrics.txt  tags.txt
src/: __init__.py  pipeline.py
src/heartcodec/: modeling_heartcodec.py
src/heartcodec/models/: flow_matching.py  transformer.py
src/heartlib/heartmula/: modeling_heartmula.py
src/heartlib/pipelines/: lyrics_transcription.py  music_generation.py
src/heartmula/: modeling_heartmula.py
src/pipelines/: music_generation.py
