[metadata]
name = heartmula
version = 0.1.0
description = Multi-module music generation system
author = HeartMuLa Team
author_email = TBD
long_description = file: README.md
long_description_content_type = text/markdown
url = TBD
license = CC-BY-NC-4.0
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy==2.0.2
    torch==2.9.0+cu126
    torchaudio==2.9.0+cu126
    torchcodec==0.9.1
    torchtune==0.6.1
    torchvision==0.24.0+cu126
    tqdm==4.67.1
    traitlets==5.7.1
    traittypes==0.2.3
    transformers==4.57.3
    tokenizers==0.22.1
    ipykernel==6.17.1
    einops==0.8.1
    accelerate==1.12.0
    vector-quantize-pytorch==1.27.15

